code: updated to Java 11, some minor optimizations